Fixed image cut off issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
   padding: 0;
   height: 100vh;
-  background-color: #333; /* Dark grey background color */
+  background-color: #21FFB9; /* Dark grey background color */
 }
 
 
@@ -11,7 +11,7 @@ body {
   height: 100vh;
   justify-content: center;
   align-items: center;
-  object-fit: cover;
+  object-fit: contain;
 }
 
 
